--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
 	<header>
+		<div class="light-theme-button"></div>
+		<div class="dark-theme-button"></div>
 		<div class="header-logo"></div>
-		<div class="header-menu"></div>
+		<div class="header-menu">
+			<img class="header-text-img" src="img/text header.svg" alt=":)">
+			<div class="menu"><p>головна</p></div>
+			<div class="all-about"><p>про "кб"</p></div>
+			<div class="contacts"><p>контакти</p></div>
+		</div>
 		<div class="header-menu-shade"></div>
 	</header>
 	<script src="js/common.js" type="text/javascript"></script>
