--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<div class="header-logo"></div>
 		<div class="header-menu">
 			<img class="header-text-img" src="img/text header.svg" alt=":)">
-			<div class="menu"><p>головна</p></div>
-			<div class="all-about"><p>про "кб"</p></div>
-			<div class="contacts"><p>контакти</p></div>
+			<div class="menu">головна</div>
+			<div class="all-about">про "кб"</div>
+			<div class="contacts">контакти</div>
 		</div>
 		<div class="header-menu-shade"></div>
 	</header>
