--- a/index.html
+++ b/index.html
@@ -9,17 +9,40 @@
 </head>
 <body>
 	<header>
-		<div class="light-theme-button"></div>
-		<div class="dark-theme-button"></div>
+		<div class="light-theme-button shade"></div>
+		<div class="dark-theme-button shade"></div>
 		<div class="header-logo"></div>
 		<div class="header-menu">
 			<img class="header-text-img" src="img/text header.svg" alt=":)">
-			<div class="menu">головна</div>
-			<div class="all-about">про "кб"</div>
-			<div class="contacts">контакти</div>
+			<div class="menu shade">головна</div>
+			<div class="all-about shade">про "кб"</div>
+			<div class="contacts shade">контакти</div>
 		</div>
-		<div class="header-menu-shade"></div>
+		<div class="header-menu-shade shade"></div>
 	</header>
+
+
+
+	<main>
+		<div class="first-main-text">
+			<p class="first-three-p"><span class="orange">Комп'ютерна безпека</span> — це сукупність методів захисту у галузі телекомунікацій та інформатики, пов'язаних з оцінкою і контролюванням ризиків, що виникають при користуванні комп'ютерами та комп'ютерними мережами і їх впровадження з точки зору конфіденційності, цілісності і доступності.</p>
+		</div>
+		<div class="first-main-text-shade shade">s</div>
+		<img src="img/1.png" class="text-img-first" alt=":)">
+		<div class="text-img-first-shade shade"></div>
+	</main>
 	<script src="js/common.js" type="text/javascript"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+<!-- to do
+	css
+	mobile view
+	1.svg or 1.png?
+	-->
