--- a/index.html
+++ b/index.html
@@ -25,12 +25,47 @@
 
 	<main>
 		<div class="first-main-text">
-			<p class="first-three-p"><span class="orange">Комп'ютерна безпека</span> — це сукупність методів захисту у галузі телекомунікацій та інформатики, пов'язаних з оцінкою і контролюванням ризиків, що виникають при користуванні комп'ютерами та комп'ютерними мережами і їх впровадження з точки зору конфіденційності, цілісності і доступності.</p>
+			<p class="first-four-p"><span class="orange">&nbsp &nbspКомп'ютерна безпека</span> — це сукупність методів захисту у галузі телекомунікацій та інформатики, пов'язаних з оцінкою і контролюванням ризиків, що виникають при користуванні комп'ютерами та комп'ютерними мережами і їх впровадження з точки зору конфіденційності, цілісності і доступності.</p>
 		</div>
 		<div class="first-main-text-shade shade">s</div>
 		<img src="img/1.png" class="text-img-first" alt=":)">
 		<div class="text-img-first-shade shade"></div>
+
+		<div class="second-main-text">
+			<p class="second-four-p"><span class="orange">Закон України «Про основні засади забезпечення кібербезпеки України»</span> дає таке визначення: «Кібербезпека — захищеність життєво важливих інтересів людини і громадянина, суспільства та держави під час використання кіберпростору, за якої забезпечуються сталий розвиток інформаційного суспільства та цифрового комунікативного середовища, своєчасне виявлення, запобігання і нейтралізація реальних і потенційних загроз національній безпеці України у кіберпросторі».</p>
+		</div>
+		<div class="second-main-text-shade shade">s</div>
+		<img src="img/2.png" class="text-img-second" alt=":)">
+		<div class="text-img-second-shade shade"></div>
+
+		<img src="img/3.png" class="text-img-third" alt=":)">
+		<div class="text-img-third-shade shade"></div>
+		<div class="third-main-text">
+			<p class="third-four-p">&nbsp Створення безпечних комп'ютерних систем і додатків
+є метою діяльності мережевих інженерів і програмістів, 
+а також предметом теоретичного дослідження як у галузі телекомунікацій та інформатики, так і економіки. У зв'язку із складністю і трудомісткістю більшості процесів і методів захисту цифрового обладнання, інформації та комп'ютерних систем від ненавмисного чи несанкціонованого доступу вразливості комп'ютерних систем становлять значну проблему для їхніх користувачів. <br>
+   &nbsp &nbsp <span class="orange">Кібербезпека</span> — це безпека ІТ систем (обладнання та програм). Кібербезпека є частиною інформаційної безпеки будь-якої організації.</p>
+		</div>
+		<div class="third-main-text-shade shade">s</div>
+		<img src="img/4.png" class="text-img-fourth" alt=":)">
+		<div class="text-img-fourth-shade shade"></div>
+		<img src="img/5.png" class="text-img-fifth" alt=":)">
+		<div class="text-img-fifth-shade shade"></div>
+		<div class="fourth-main-text">
+			<p class="fourth-four-p">Кіберполіція й інші правоохоронні органи здійснюють розслідування, тоді як Урядова команда реагування на кіберінциденти (CERT-UA), Ситуаційний центр забезпечення кібербезпеки при СБУ (MISP-UA) та Національний координаційний центр кібербезпеки (НКЦК) при РНБО мають нейтралізувати загрозу в її активній фазі. Навіть приватні підприємства можуть звертатися до CERT-UA за оперативною підтримкою. Держателі державних інформаційних ресурсів також інформують про інциденти Державну службу спеціального зв'язку та захисту інформації (ДССЗЗІ).</p>
+		</div>
+		<div class="fourth-main-text-shade shade">s</div>
+		<div class="fifth-main-text">
+			<p class="fifth-four-p">Попри все, рівень захищеності кіберпростору України залишається незадовільним. На думку експертів, українські системи залишаються вразливими до хакерських атак. Цьому сприяє недостатня компетентність спеціалістів, що працюють на державній службі. Зі сторони бізнесу причина вразливості полягає в необізнаності та неусвідомленості загрози. В Україні наразі не існує централізованого управління силами реагування на кіберзлочини.</p>
+		</div>
+		<div class="fifth-main-text-shade shade">s</div>
+		<img src="img/6.png" class="text-img-sixth" alt=":)">
+		<div class="text-img-sixth-shade shade"></div>
+
 	</main>
+
+
+
 	<script src="js/common.js" type="text/javascript"></script>
 </body>
 </html>
@@ -42,7 +77,21 @@
 
 
 <!-- to do
-	css
-	mobile view
-	1.svg or 1.png?
-	-->
+	css:
+	mobile view ...mb some time later...
+	change @media for mobile
+	ipad view
+	1 or 2 br before orange cybersecurity
+	text-img-second on zoom 30%
+	shadows of orange cybersecurity and img
+	border-radius for small zoom
+	change img 6
+	shadows of text 5 img 6
+
+
+	template:
+	change contacts
+	light theme
+	space between theme icons
+	change img 6
+-->
