--- a/index.html
+++ b/index.html
@@ -62,6 +62,67 @@
 		<img src="img/6.png" class="text-img-sixth" alt=":)">
 		<div class="text-img-sixth-shade shade"></div>
 
+
+
+		<div class="sixth-main-text">
+			<p class="sixth-four-p"><span class="sixth-h orange">Захист комп'ютера</span><br>
+  &nbsp &nbspІснує багато шляхів захисту комп'ютерів, серед них методи, що ґрунтуються на використанні безпечних операційних систем та апаратного забезпечення, здатного захистити комп'ютерну систему.<br><br>
+
+<span class="sixth-h orange">Превентивні методи захисту</span><br>
+<span class="bigger-font">Згідно зі слів експертів з кібербезпеки можна виділити такі методи захисту:</span></p>
+	<ul>
+   	<li>безпечна побудова серверної частини</li>
+   	<ul>
+		      <li>здійснювати регулярне оновлення всіх елементів інфраструктури</li>
+		      <ul>
+			      <li>робити тестування навантаження</li>
+			      <ul>
+		            <li>проводити аналіз коду використовуваних бібліотек</li>
+		            <ul>
+		               <li>проводити аналіз коду програми</li>
+		                <ul>
+		                  <li>ідентифікувати вразливості шляхом сканування</li>
+		                  <ul>
+		                      <li>проводити регулярний аудит інформаційної безпеки</li>
+		                  </ul>
+		              	</ul>
+		            </ul>  
+		         </ul>	
+		</ul>
+   </ul>
+		</div>
+		<div class="sixth-main-text-shade shade">s</div>
+		<div class="seventh-main-text">
+			<p class="seventh-four-p">Протягом року кількість значущих кібератак на критичні об'єкти в Європі подвоїлася. Про це з посиланням на Агентство Європейського Союзу з кібербезпеки (ENISA) пише CNN.<br><br>
+			 За 2020 рік було здійснено 304 значущі шкідливі атаки на "критичні сектори", в той час як у 2019 їх було 146. Агенція повідомила також про зростання на 46% нападів на лікарні і мережі охорони здоров'я.</p>
+		</div>
+		<div class="seventh-main-text-shade shade"></div>
+		<div class="eighth-main-text">
+			<p class="eighth-four-p">Статистика свідчить про наростання глобального впливу кібератак, часто у формі програм-вимагачів.<br><br>
+
+<i>"Вони вражають компанії і розуміють, яку саме компанію вони вразили, і намагаються проникнути якомого повніше, щоб потім змогти витягти щонайбільше грошей"</i>, - зазначив старший радник з питань безпеки компаній Джон Шієр. </p>
+		</div>
+		<div class="eighth-main-text-shade shade"></div>
+		<img src="img/chart 1.png" class="text-img-seventh" alt=":)">
+		<div class="text-img-seventh-shade shade"></div>
+		<div class="ninth-main-text">
+			<p class="ninth-four-p">СТАТИСТИКА КІБЕРАТАК НА 2020-2021 рр</p>
+		</div>
+		<img src="img/chart 2.png" class="text-img-eighth" alt=":)">
+		<div class="text-img-eighth-shade shade"></div>
+		<div class="tenth-main-text">
+			<p class="tenth-four-p"><span class="sixth-h orange">Розвиток кіберзахисту – невід'ємна складова цифровізації України</span>
+				<br>
+   &nbsp Про це заявив Віце-прем'єр – Міністр цифрової трансформації України Михайло Федоров під час відкриття круглого столу з питань реформування сфери кібербезпеки. Круглий стіл зібрав представників державних органів та міжнародних організацій для обговорення нагальних змін, яких потребує українська кіберсфера.<br><br>
+
+   &nbsp “Прийнято закон про електронні комунікації, який вже наступного року має вступити в дію. Також зареєстрований законопроєкт про критичну інфраструктуру та триває робота над законопроєктом про регулятора, про кібербезпеку, про хмари та багато іншого”.<br><br>
+
+   &nbsp Під час круглого столу представники проєкту USAID “Кібербезпека критично важливої інфраструктури України” представили Дорожню карту реформ з національної готовності до кіберзахисту критичної інфраструктури. Дорожня карта це чітке довгострокове бачення змін та пріоритетних реформ, що мають якісно поліпшити кібербезпеку об'єктів критичної інфраструктури та допомогти всім зацікавленим суб’єктам визначити власні кроки на цьому шляху.<br><br>
+
+   &nbsp Підсумовуючи результати круглого столу “Забезпечення реформування сфери кібербезпеки: стратегічні пріоритети”, очільник проєкту USAID “Кібербезпека критично важливої інфраструктури України” Тімоті Дубель підтвердив готовність проєкту надати всю необхідну допомогу Комітету у підготовці потрібних законів, особливо таких базових як про кібербезпеку, захист критичної інфраструктури, імплементації європейського законодавства. </p>
+		</div>
+		<div class="tenth-main-text-shade shade"></div>
+
 	</main>
 
 
@@ -83,10 +144,8 @@
 	ipad view
 	1 or 2 br before orange cybersecurity
 	text-img-second on zoom 30%
-	shadows of orange cybersecurity and img
 	border-radius for small zoom
 	change img 6
-	shadows of text 5 img 6
 
 
 	template:
@@ -94,4 +153,8 @@
 	light theme
 	space between theme icons
 	change img 6
+	icon for tab
+	tab name
+	hide copyright + switch rus to ua text(charts) + remove white bg + send me NOT IN TEMPATE
+	italic on 8th p
 -->
