--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Кібербезпека</title>
+	<link class="first-rel" rel="shortcut icon" href="img/logo header.svg" type="image/svg">
 	<link rel="stylesheet" href="libs/reset.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 	<header>
-		<div class="light-theme-button shade"></div>
-		<div class="dark-theme-button shade"></div>
+		<div class="light-theme-button"></div>
+		<div class="dark-theme-button"></div>
 		<div class="header-logo"></div>
 		<div class="header-menu">
 			<img class="header-text-img" src="img/text header.svg" alt=":)">
-			<div class="menu shade">головна</div>
-			<div class="all-about shade">про "кб"</div>
-			<div class="contacts shade">контакти</div>
+			<div class="menu"><a href="#main">головна</a></div>
+			<div class="all-about"><a href="#allabout">про "кб"</a></div>
+			<div class="contacts"><a href="#contacts">контакти</a></div>
 		</div>
 		<div class="header-menu-shade shade"></div>
 	</header>
@@ -25,6 +26,7 @@
 
 	<main>
 		<div class="first-main-text">
+			<a name="main"></a>
 			<p class="first-four-p"><span class="orange">&nbsp &nbspКомп'ютерна безпека</span> — це сукупність методів захисту у галузі телекомунікацій та інформатики, пов'язаних з оцінкою і контролюванням ризиків, що виникають при користуванні комп'ютерами та комп'ютерними мережами і їх впровадження з точки зору конфіденційності, цілісності і доступності.</p>
 		</div>
 		<div class="first-main-text-shade shade">s</div>
@@ -57,14 +59,17 @@
 		<div class="fourth-main-text-shade shade">s</div>
 		<div class="fifth-main-text">
 			<p class="fifth-four-p">Попри все, рівень захищеності кіберпростору України залишається незадовільним. На думку експертів, українські системи залишаються вразливими до хакерських атак. Цьому сприяє недостатня компетентність спеціалістів, що працюють на державній службі. Зі сторони бізнесу причина вразливості полягає в необізнаності та неусвідомленості загрози. В Україні наразі не існує централізованого управління силами реагування на кіберзлочини.</p>
+			
 		</div>
 		<div class="fifth-main-text-shade shade">s</div>
 		<img src="img/6.png" class="text-img-sixth" alt=":)">
+
 		<div class="text-img-sixth-shade shade"></div>
 
 
 
 		<div class="sixth-main-text">
+
 			<p class="sixth-four-p"><span class="sixth-h orange">Захист комп'ютера</span><br>
   &nbsp &nbspІснує багато шляхів захисту комп'ютерів, серед них методи, що ґрунтуються на використанні безпечних операційних систем та апаратного забезпечення, здатного захистити комп'ютерну систему.<br><br>
 
@@ -91,7 +96,7 @@
 		</ul>
    </ul>
 		</div>
-		<div class="sixth-main-text-shade shade">s</div>
+		<div class="sixth-main-text-shade shade">s<a name="allabout"></a></div>
 		<div class="seventh-main-text">
 			<p class="seventh-four-p">Протягом року кількість значущих кібератак на критичні об'єкти в Європі подвоїлася. Про це з посиланням на Агентство Європейського Союзу з кібербезпеки (ENISA) пише CNN.<br><br>
 			 За 2020 рік було здійснено 304 значущі шкідливі атаки на "критичні сектори", в той час як у 2019 їх було 146. Агенція повідомила також про зростання на 46% нападів на лікарні і мережі охорони здоров'я.</p>
@@ -103,12 +108,12 @@
 <i>"Вони вражають компанії і розуміють, яку саме компанію вони вразили, і намагаються проникнути якомого повніше, щоб потім змогти витягти щонайбільше грошей"</i>, - зазначив старший радник з питань безпеки компаній Джон Шієр. </p>
 		</div>
 		<div class="eighth-main-text-shade shade"></div>
-		<img src="img/chart 1.png" class="text-img-seventh" alt=":)">
+		<img src="img/chart 1.svg" class="text-img-seventh" alt=":)">
 		<div class="text-img-seventh-shade shade"></div>
 		<div class="ninth-main-text">
 			<p class="ninth-four-p">СТАТИСТИКА КІБЕРАТАК НА 2020-2021 рр</p>
 		</div>
-		<img src="img/chart 2.png" class="text-img-eighth" alt=":)">
+		<img src="img/chart 2.svg" class="text-img-eighth" alt=":)">
 		<div class="text-img-eighth-shade shade"></div>
 		<div class="tenth-main-text">
 			<p class="tenth-four-p"><span class="sixth-h orange">Розвиток кіберзахисту – невід'ємна складова цифровізації України</span>
@@ -123,38 +128,62 @@
 		</div>
 		<div class="tenth-main-text-shade shade"></div>
 
+		<div class="imgs-container">
+			<div class="imgs1">
+				<img src="img/image 1.png" alt=":)">
+				<img src="img/globe.svg" alt=":)">
+				<img src="img/image 2.png" alt=":)">
+			</div>
+			<div class="imgs2">
+				<img src="img/image 3.png" alt=":)">
+				<img src="img/image 4.png" alt=":)">
+			</div>
+			<div class="imgs3">
+				<img src="img/image 5.png" alt=":)">
+				<img src="img/lock-circle.svg" alt=":)">
+				<img src="img/image 6.png" alt=":)">
+			</div>
+		</div>
 	</main>
 
+	<footer>
+		<p>Контакти та інформація:</p>
+		<p>+380 99 702 44 08<br>
+			yeremiy@gmail.com
+		</p>
+		<p>+380 66 218 67 69<br>
+			andreyderkach2005@gmail.com
+		</p>
+		<div class="logo-footer"><a name="contacts"></a></div>
+	</footer>
+	<div class="bottom"></div>
 
 
 	<script src="js/common.js" type="text/javascript"></script>
 </body>
 </html>
-
-
-
-
-
-
-
 <!-- to do
 	css:
 	mobile view ...mb some time later...
 	change @media for mobile
 	ipad view
-	1 or 2 br before orange cybersecurity
-	text-img-second on zoom 30%
 	border-radius for small zoom
 	change img 6
+	tab icon: 
+		place bg on logo in 1 svg file
+		also for light
+	charts
+	imgs grid
+	light theme
 
 
 	template:
-	change contacts
-	light theme
 	space between theme icons
-	change img 6
-	icon for tab
-	tab name
-	hide copyright + switch rus to ua text(charts) + remove white bg + send me NOT IN TEMPATE
-	italic on 8th p
+	z-index of imgs
+	light theme bg darker
+	change all white color
+	tab icon: 
+		place bg on logo in 1 svg file
+		also for light
+	chart months are rus
 -->
