--- a/index.html
+++ b/index.html
@@ -109,12 +109,10 @@
 		</div>
 		<div class="eighth-main-text-shade shade"></div>
 		<img src="img/chart 1.svg" class="text-img-seventh" alt=":)">
-		<div class="text-img-seventh-shade shade"></div>
 		<div class="ninth-main-text">
 			<p class="ninth-four-p">СТАТИСТИКА КІБЕРАТАК НА 2020-2021 рр</p>
 		</div>
 		<img src="img/chart 2.svg" class="text-img-eighth" alt=":)">
-		<div class="text-img-eighth-shade shade"></div>
 		<div class="tenth-main-text">
 			<p class="tenth-four-p"><span class="sixth-h orange">Розвиток кіберзахисту – невід'ємна складова цифровізації України</span>
 				<br>
@@ -163,18 +161,9 @@
 </body>
 </html>
 <!-- to do
-	css:
-	mobile view ...mb some time later...
-	change @media for mobile
-	ipad view
-	border-radius for small zoom
-	change img 6
 	tab icon: 
 		place bg on logo in 1 svg file
 		also for light
-	charts
-	imgs grid
-	light theme
 
 
 	template:
@@ -186,4 +175,5 @@
 		place bg on logo in 1 svg file
 		also for light
 	chart months are rus
+	delete shades from charts
 -->
