--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 
 	<footer>
 		<p>Контакти та інформація:</p>
-		<p>+380 99 702 44 08<br>
-			yeremiy@gmail.com
+		<p><a href="tel:0997024408">+380 99 702 44 08</a><br>
+			<a href="mailto:yeremiy@gmail.com">yeremiy@gmail.com</a>
 		</p>
-		<p>+380 66 218 67 69<br>
-			andreyderkach2005@gmail.com
+		<p><a href="tel:0662186769">+380 66 218 67 69<br>
+			<a href="mailto:andreyderkach2005@gmail.com">andreyderkach2005@gmail.com</a>
 		</p>
 		<div class="logo-footer"><a name="contacts"></a></div>
 	</footer>
